[package]
name = "xe9680-gpu-mapper"
version = "1.7.0"
edition = "2021"
authors = ["Wharton Wang"]

[dependencies]
wry = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "xe9680-gpu-mapper"
path = "src/main.rs"

[profile.release]
strip = true
lto = true

[target.'cfg(windows)'.build-dependencies]

[package.metadata.winres]
OriginalFilename = "xe9680-gpu-mapper.exe"
ProductName = "Dell XE9680 GPU Mapper"

