[package]
name = "xe9680-gpu-mapper"
version = "1.7.0"
edition = "2021"
authors = ["Wharton Wang"]

[dependencies]
wry = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "xe9680-gpu-mapper"
path = "src/main.rs"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1

[build-dependencies]
winres = "0.1"

[package.metadata.winres]
OriginalFilename = "xe9680-gpu-mapper.exe"
ProductName = "Dell XE9680 GPU Mapper"
FileDescription = "Dell XE9680 GPU Mapping Query Tool"
CompanyName = "Wharton Wang"
LegalCopyright = "Copyright (c) 2024 Wharton Wang"

